# grim-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md
.github/workflows/: ci.yml
benches/: alloc_profiler.rs  capture_benchmarks.rs  encode_benchmarks.rs
doc/: api.md  cli.md  library_examples.md  profiling_manual.md
examples/: capture_screenshots.rs  comprehensive_demo.rs  profile_test.rs  second_monitor_demo.rs
scripts/: run_fair_compare.sh  run_performance.sh
src/: geometry.rs  lib.rs  pixel_format.rs  wayland_capture.rs
src/wayland_capture/: capture.rs  mod.rs  scaling.rs  transform.rs  wayland_events.rs
tests/: test.rs  test_cli_parsing.rs  test_encapsulation.rs  test_filename_format.rs  test_geometry.rs  test_geometry_properties.rs  test_greatest_scale_for_region.rs  test_grid_aligned.rs  test_pixel_format.rs  test_rotated_output_semantics.rs
